refactor: marker message is updated, unsupportable args removed; moved files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 test-folder/
+example-project
 
 **/.DS_Store
 
@@ -11,4 +12,6 @@ wheels/
 *.egg-info
 
 # Virtual environments
-.venv
+*env
+*cache*
+
