--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,11 @@ addopts = [
     "--cov-report=html",
     "--cov-report=term",
 ]
+# IGNORE tests/artifacts dir while running tests to avoid this error:
+# ERROR - Defining 'pytest_plugins' in a non-top-level conftest is no longer supported:
+# https://docs.pytest.org/en/stable/deprecations.html#pytest-plugins-in-non-top-level-conftest-files
+# https://docs.pytest.org/en/7.1.x/reference/reference.html#confval-norecursedirs
+norecursedirs = ["tests/artifacts"]
 
 [tool.coverage.paths]
 source = ["src/"]
