fix: execute-job needs build-wheel

--- a/.github/workflows/ci-cd-ds-projen.yaml
+++ b/.github/workflows/ci-cd-ds-projen.yaml
@@ -55,6 +55,8 @@ jobs:
           path: ./dist/
 
   execute-tests:
+    needs:
+      - build-wheel
     name: Run Tests
     runs-on: ubuntu-latest
     steps:
