adding uv setup in check-version and tag-version jobs

--- a/.github/workflows/ci-cd-ds-projen.yaml
+++ b/.github/workflows/ci-cd-ds-projen.yaml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v5
+      
       - name: Check version
         # https://github.com/gnprice/toml-cli
         run: |
@@ -90,6 +93,9 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+      
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v5
 
       - name: Push Version Tag
         # https://github.com/gnprice/toml-cli
